# SandBox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  WIP.md  run.ps1
ext/: CMakeLists.txt
lib/: CMakeLists.txt
old_src/: CMakeLists.txt  main.cu
src/: CMakeLists.txt  bvh.cuh  common.cu  common.cuh  kernels.cuh  main.cpp  main.cu  math_helper.cuh  renderer.cu  renderer.cuh  rtcore.cuh  structs.cuh  utils.cuh  window.cu  window.cuh
src/core/: App.cpp  App.h  Window.cpp  Window.h
src/render/: Buffer.h  GLInterop.cpp  GLInterop.h  RenderContext.cpp  RenderContext.h  TestKernel.cu  TestKernel.h
src/scene/: Mesh.cpp  Mesh.h
src/shaders/: Common.h  PathTracingKernel.cu
